# object-nav

./: .gitignore  .gitmodules  AGENTS.md  README.md  UBUNTU_CODEX_HANDOFF.md  environment.lock.txt  pyproject.toml  requirements-vision.txt
configs/: system.yaml  vocabulary.yaml
docker/camport-noetic/: Dockerfile
docs/: camera_extrinsics.md  environment_status.yaml  field_integration.md  interface_confirmation.yaml  model_support.md  safety_checklist.yaml  scope_change_2026-07-22.md  vendor_sources.yaml  verification_2026-07-21.md  verification_2026-07-23.md
ros1_ws/src/object_nav_ros/: CMakeLists.txt  README.md  package.xml
ros1_ws/src/object_nav_ros/scripts/: move_base_adapter_node.py
ros1_ws/src/percipio_object_bridge/: CMakeLists.txt  package.xml
ros1_ws/src/percipio_object_bridge/launch/: object_nav_bridge.launch
ros1_ws/src/percipio_object_bridge/scripts/: rgbd_tcp_bridge.py
scripts/: activate_ros.zsh  activate_vision.zsh  build_camport_container.sh  install_vision_env.sh  prepare_models.py  ros1_readonly_inspect.sh  run_camport_container.sh  run_percipio_bridge.sh  update_local_nav_documents.py  verify_percipio_live.py  verify_percipio_recording.py  verify_vision.py
src/object_nav_demo/: __init__.py  app_factory.py  camera_protocol.py  cli.py  command_parser.py  command_ui.py  config.py  detector.py  environment_doctor.py  frame_source.py  goal_builder.py  local_mapping.py  models.py  navigation_adapter.py  realtime_detection.py  safety_arbiter.py  search_manager.py  state_machine.py  target_localizer.py  telemetry.py  vocabulary_manager.py
tests/: test_core.py
