<?xml version="1.0"?>
<package format="2">
  <name>object_nav_ros</name>
  <version>0.1.0</version>
  <description>Optional ROS 1 Noetic odom-frame local-goal adapter for the mapless demo.</description>
  <maintainer email="maintainer@example.invalid">Project Maintainer</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2_ros</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export />
</package>
