<?xml version="1.0"?>
<package format="2">
  <name>percipio_object_bridge</name>
  <version>0.1.0</version>
  <description>Read-only synchronized RGB-D bridge for the GM461 ObjectNav demo.</description>
  <maintainer email="local@example.invalid">ObjectNav Maintainer</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
</package>
